--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <nav>
     <ul>
     <li><a href="./index.html">Home</a></li>
-      <li><a href="../Blog.html">Blog</a></li>
+      <li><a href="./Blog.html">Blog</a></li>
       <li><a href="./pageshome/hardwarepage.html">Hardware</a></li>
       <li><a href="./pageshome/softwarehome.html">Software</a></li>
     <li><a href="./pageshome/programminghome.html">Programming</a></li>
